--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="number" step="0.01" id="price" placeholder="Qual o valor dele?">
             <label for="amount">Quantidade:</label>
             <input type="number" min="0" id="amount" placeholder="Quantos produtos?">
-            <button id="cadastrar">Cadastrar</button>
+            <button type="button" id="cadastrar">Cadastrar</button>
         </form>
     </div>
     <div id="result">Total</div>
